Fixed gallery styles for phones (text + tabs different color) + fixed scrollbar it was hidden by dynamic header

--- a/src/app/features/landing/pages/gallery/gallery.component.scss
+++ b/src/app/features/landing/pages/gallery/gallery.component.scss
@@ -23,6 +23,12 @@
         margin: 0 auto;
         margin-bottom: 20px;
         line-height: 1.3;
+
+        @media screen and (max-width: 700px) {
+            text-align: left;
+            line-height: 1.1;
+            font-size: 30px !important;
+        }
     }
 
     .subtitle {
@@ -31,11 +37,16 @@
         margin: 0 auto;
         margin-bottom: 40px;
         line-height: 1.3;
+        @media screen and (max-width: 700px) {
+            text-align: left;
+            // line-height: 1.1;
+        }
     }
 
     .tabs {
         display: flex;
         justify-content: center;
+        flex-wrap: wrap;
         gap: 1rem;
         margin-bottom: 2rem;
 
@@ -50,6 +61,7 @@
             border: 1px solid #472B2F4D;
             transition: all 0.2s ease;
             font-size: 16px;
+            color: black;
 
             &.active {
                 background: #FAAF71;
