--- a/src/styles.scss
+++ b/src/styles.scss
@@ -90,6 +90,25 @@ body {
 
 }
 
+body:has(.sticky-visible) .custom-scrollbar-track {
+    top: 67px;
+
+    animation: show-anim 1s forwards;
+    @media screen and (max-width: 500px) {
+        top: 54px;
+    }
+}
+
+@keyframes show-anim {
+    from {
+        opacity: 0;
+    }
+
+    to {
+        opacity: 1;
+    }
+}
+
 *::selection {
     color: white;
     background-color: #fcb69f;
